.metals/metals.log
2023.02.08 02:16:37 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /Users/rohankodavalla/COEN6761-Code-Blooded/.metals/lsp.trace.json or /Users/rohankodavalla/Library/Caches/org.scalameta.metals/lsp.trace.json
2023.02.08 02:16:38 INFO  logging to file /Users/rohankodavalla/COEN6761-Code-Blooded/.metals/metals.log
2023.02.08 02:16:38 INFO  Started: Metals version 0.11.10 in workspace '/Users/rohankodavalla/COEN6761-Code-Blooded' for client Visual Studio Code 1.75.0.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/Users/rohankodavalla/Library/Caches/Coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.10.5/scribe-slf4j_2.13-3.10.5.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.02.08 02:16:41 INFO  time: initialize in 3.35s
2023.02.08 02:16:54 WARN  Build server is not auto-connectable.
2023.02.08 02:16:54 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/App.java
Feb. 08, 2023 2:16:54 A.M. org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 2
Feb. 08, 2023 2:16:55 A.M. org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 1
Feb. 08, 2023 2:16:55 A.M. org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 5
2023.02.08 02:16:58 INFO  time: code lens generation in 3.05s
2023.02.08 02:16:58 INFO  time: code lens generation in 3.54s
2023.02.08 02:40:53 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
Feb. 08, 2023 2:42:44 A.M. org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 55
2023.02.08 02:42:53 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
2023.02.08 02:50:07 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
Feb. 08, 2023 2:50:27 A.M. org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
2023.02.08 02:50:34 INFO  shutting down Metals
2023.02.08 02:50:48 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /Users/rohankodavalla/COEN6761-Code-Blooded/.metals/lsp.trace.json or /Users/rohankodavalla/Library/Caches/org.scalameta.metals/lsp.trace.json
2023.02.08 02:50:48 INFO  logging to file /Users/rohankodavalla/COEN6761-Code-Blooded/.metals/metals.log
2023.02.08 02:50:48 INFO  Started: Metals version 0.11.10 in workspace '/Users/rohankodavalla/COEN6761-Code-Blooded' for client Visual Studio Code 1.75.0.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/Users/rohankodavalla/Library/Caches/Coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.10.5/scribe-slf4j_2.13-3.10.5.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.02.08 02:50:50 INFO  time: initialize in 1.92s
2023.02.08 02:50:55 WARN  Build server is not auto-connectable.
2023.02.08 02:50:55 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
Feb. 08, 2023 2:50:55 A.M. org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 4
2023.02.08 02:50:56 INFO  time: code lens generation in 1.56s
2023.02.08 02:51:01 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java
2023.02.08 02:56:36 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
Feb. 08, 2023 3:04:13 A.M. org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 589
2023.02.08 03:05:21 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
2023.02.08 03:14:07 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
2023.02.08 03:17:10 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/App.java
2023.02.08 03:17:12 INFO  time: code lens generation in 1.3s
2023.02.08 03:18:48 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
2023.02.08 03:28:46 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java
2023.02.08 03:28:53 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
2023.02.08 03:28:56 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
2023.02.08 03:28:57 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
2023.02.08 03:30:11 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java
2023.02.08 03:30:12 WARN  Running javac-semanticdb failed for file:///Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java. Output:
/Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java:142: error: illegal start of expression
		return {x,y};
		       ^
/Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java:142: error: not a statement
		return {x,y};
		        ^
/Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java:142: error: ';' expected
		return {x,y};
		         ^
/Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java:142: error: not a statement
		return {x,y};
		          ^
/Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java:142: error: ';' expected
		return {x,y};
		           ^
5 errors
2023.02.08 03:35:24 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java
Feb. 08, 2023 3:39:44 A.M. org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 1960
2023.02.08 03:40:25 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/main/java/COEN6761_Group_Project/Robot_Motion/Robot.java
2023.02.08 03:40:36 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
2023.02.08 03:43:05 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
2023.02.08 03:47:06 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
Feb. 08, 2023 3:57:36 A.M. org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 2152
2023.02.08 04:09:58 INFO  shutting down Metals
2023.02.08 04:10:11 INFO  tracing is disabled for protocol LSP, to enable tracing of incoming and outgoing JSON messages create an empty file at /Users/rohankodavalla/COEN6761-Code-Blooded/.metals/lsp.trace.json or /Users/rohankodavalla/Library/Caches/org.scalameta.metals/lsp.trace.json
2023.02.08 04:10:12 INFO  logging to file /Users/rohankodavalla/COEN6761-Code-Blooded/.metals/metals.log
2023.02.08 04:10:12 INFO  Started: Metals version 0.11.10 in workspace '/Users/rohankodavalla/COEN6761-Code-Blooded' for client Visual Studio Code 1.75.0.
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/Users/rohankodavalla/Library/Caches/Coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.10.5/scribe-slf4j_2.13-3.10.5.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.02.08 04:10:14 INFO  time: initialize in 1.48s
2023.02.08 04:10:19 WARN  Build server is not auto-connectable.
2023.02.08 04:10:19 WARN  no build target for: /Users/rohankodavalla/COEN6761-Code-Blooded/src/test/java/COEN6761_Group_Project/Robot_Motion/AppTest.java
2023.02.08 04:10:20 INFO  time: code lens generation in 1.61s
